--- a/BR-MS/UserAuth.html
+++ b/BR-MS/UserAuth.html
@@ -24,7 +24,7 @@
 <body>
 
 <div id="userAuth">
-    <el-form :inline="true" ref="queryParams" label-position="right" label-with="80px" :model="queryParams">
+    <el-form :inline="true" ref="queryParams" label-position="right" label-with="80px" :model="queryParams" v-loading.fullscreen="initializing" element-loading-text="正在获取数据" element-loading-background="rgba(0,0,0,0.7)">
         <el-form-item label="用户名" v-model="queryParams.username">
             <el-input></el-input>
         </el-form-item>
@@ -89,6 +89,7 @@
         data: function () {
 
             //具体item从后端获取并处理
+            //将未审核的用户GET到这里
             const item1 = {
                 username: 'liadrinz',
                 role: '普通用户',
@@ -120,6 +121,7 @@
 
             return {
                 results: [item1, item2],
+                initializing:true,
                 queryParams: {
                     usertype: '',
                     username: '',
@@ -128,6 +130,30 @@
                     company: ''
                 }
             }
+        },
+        mounted:function(){
+            //从后端拉取数据
+            $.ajax({
+                type:'get',
+                url:'http://10.103.251.150:8080/dispatch/user/toauth',
+                success:(data,result,resultDesp)=>{
+                    if (result === 1000 || result === 'success') {
+                        console.log(data);
+                        console.log(result);
+                        console.log(resultDesp);
+                        this.initializing=false;
+                    } else {
+                        this.$alert('数据拉取失败');
+                    }
+                    this.initializing=false;
+                },
+                error:(result,resultDesp)=>{
+                    console.log(result);
+                    console.log(resultDesp);
+                    this.$alert('数据拉取失败');
+                    this.initializing=false;
+                }
+            })
         },
         methods: {
             agree: function (row) {
