use " rather than '

--- a/BR-MS/mainPage.html
+++ b/BR-MS/mainPage.html
@@ -110,7 +110,8 @@
         main {
             z-index: 0;
             flex: 1 0 0;
-            overflow: auto;
+            overflow-x: auto;
+            overflow-y: hidden;
         }
 
         main > iframe {
